--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Header Start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -22,16 +22,16 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -101,7 +101,7 @@
     <!-- Main Start -->
     <main>
         <!-- Categories Section-->
-        <section class="container my-5">
+        <section class="container my-5 ">
                 <div class="row g-4">
                   <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -124,7 +124,7 @@
                 </div>
         </section>
         <!-- Shoes Section-->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -166,7 +166,7 @@
               </div>
         </section>
         <!-- Bags Section-->
-        <section class="container  my-5">
+        <section class="container  my-5" id="backpack">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -208,7 +208,7 @@
               </div>
         </section>
         <!-- Subscribe Section -->
-        <section style="height: 300px;" class="container d-flex justify-content-center bg-info align-items-center rounded-3">
+        <section id="subscribe" style="height: 300px;" class="container d-flex justify-content-center bg-info align-items-center rounded-3">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
