--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
+    <!-- FavIcon -->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <!-- Custom Styles -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap Stylesheet -->
@@ -221,7 +223,7 @@
         </section>
     </main>
     <footer class="mt-5 text-center">
-        <p><small>&copy;2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+        <p><small>&copy;2025. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
 
     <!-- Bootstrap script -->
